--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 loopmare/Library/ArtifactDB filter=lfs diff=lfs merge=lfs -text
+loopmare/library/PackageCache/com.unity.burst@1.6.6/.Runtime/hostmac/lld filter=lfs diff=lfs merge=lfs -text
